<resources>
    <string name="app_name">KM Suitmedia Test</string>
    <string name="name">Name</string>
    <string name="photo_profile">photo profile</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="second_string">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="email">email@gmail.com</string>
    <string name="third_screen">Third Screen</string>
    <string name="back">back</string>
</resources>