<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/bg_first_screen"
    tools:context=".FirstScreen">

    <ImageView
        android:id="@+id/ic_photo"
        android:contentDescription="@string/photo_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_photo_first_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/ic_photo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:background="@drawable/bg_input"
            tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_palindrome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="3dp"
        app:layout_constraintTop_toBottomOf="@+id/til_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_palindrome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:hint="@string/palindrome"
            tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/check"
        android:background="@drawable/bg_button"
        app:layout_constraintTop_toBottomOf="@+id/til_palindrome"
        tools:layout_editor_absoluteX="30dp" />
    <Button
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/next"
        android:background="@drawable/bg_button"
        app:layout_constraintTop_toBottomOf="@+id/button_check"
        tools:layout_editor_absoluteX="30dp" />




</androidx.constraintlayout.widget.ConstraintLayout>