<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:paddingTop="10dp"
    tools:context=".SecondScreen">

    <include
        android:id="@+id/include"
        layout="@layout/custom_app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toTopOf="@+id/include" />

    <TextView
        android:id="@+id/title_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_string"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toTopOf="@+id/include" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <TextView
        android:id="@+id/tv_selected_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selected_user_name"
        android:textAlignment="center"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_selected_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <Button
        android:id="@+id/button_selected_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_user"
        android:textAllCaps="false"
        android:background="@drawable/bg_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>